Alignment fixes.

--- a/app/assets/stylesheets/_site.scss
+++ b/app/assets/stylesheets/_site.scss
@@ -1855,7 +1855,7 @@ li.selected > a .favicon-wrap {
 				cursor: pointer;
 				position: absolute;
 				top: 11px;
-				right: 9px;
+				right: 10px;
 				height: 12px;
 				width: 10px;
 				display: none;
@@ -1887,7 +1887,7 @@ li.selected > a .favicon-wrap {
 				margin-bottom: 1px;
 				display: block;
 				position: absolute;
-				right: 11px;
+				right: 10px;
 				top: 10px;
 			}
 			.title {
